--- a/AgglomerativeClustering.ipynb
+++ b/AgglomerativeClustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2ed35b8d",
    "metadata": {},
    "outputs": [
@@ -46,26 +46,35 @@
     "patch_sklearn ()\n",
     "from time import time\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.metrics import silhouette_score, davies_bouldin_score, calinski_harabasz_score\n",
     "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "reduced_data = PCA(n_components = 0.99).fit_transform(dataset)\n",
-    "X = dataset[:1000]\n",
-    "def bench_marks(algoritm, name):\n",
+    "\n",
+    "\n",
+    "\n",
+    "def plot_figure(data, labels):\n",
+    "    \n",
+    "    \n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    plt.scatter(data[:,0], data[:,1], c=labels, linewidths= 0.01, edgecolors='k')\n",
+    "    plt.savefig(\"AglCl.pdf\")\n",
+    "    \n",
+    "\n",
+    "def bench_marks(algoritm, name, data):\n",
     "    \n",
     "    t0 = time()\n",
-    "    estimator = make_pipeline(StandardScaler(), algoritm).fit(reduced_data)\n",
-    "    labels= estimator[-1].labels_\n",
+    "    estimator = algoritm.fit(data)\n",
+    "    labels= estimator.labels_\n",
     "        \n",
     "    fit_time = time() - t0\n",
     "    results = [name, fit_time]\n",
     "\n",
-    "    results += [silhouette_score(reduced_data , labels, metric = 'euclidean')]\n",
-    "    results += [davies_bouldin_score(reduced_data ,labels)]\n",
-    "    results += [calinski_harabasz_score(reduced_data , labels)]\n",
+    "    results += [silhouette_score(data , labels, metric = 'euclidean')]\n",
+    "    results += [davies_bouldin_score(data ,labels)]\n",
+    "    results += [calinski_harabasz_score(data , labels)]\n",
     "    \n",
-    "    results += [estimator[-1].n_clusters_]\n",
+    "    results += [estimator.n_clusters_]\n",
     "    \n",
     "    formatter_result = (\n",
     "        \"{:6s}\\t\\t{:.3f}s\\t{:.3f}\\t\\t{:.3f}\\t\\t{:.2f}\\t\\t{:.0f}\"\n",
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e8c671d2",
    "metadata": {},
    "outputs": [
@@ -83,11 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Intel(R) Extension for Scikit-learn* enabled (https://github.com/intel/scikit-learn-intelex)\n",
-      "/home/luis/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but NearestNeighbors was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/luis/.local/lib/python3.8/site-packages/sklearn/cluster/_agglomerative.py:550: UserWarning: the number of connected components of the connectivity matrix is 2 > 1. Completing it to avoid stopping the tree early.\n",
-      "  connectivity, n_connected_components = _fix_connectivity(\n"
+      "Intel(R) Extension for Scikit-learn* enabled (https://github.com/intel/scikit-learn-intelex)\n"
      ]
     },
     {
@@ -95,23 +100,8 @@
      "output_type": "stream",
      "text": [
       "__________________________________________________________________________________\n",
-      "init\t\t\ttime\t\tsilhouette\tdavies_bouldin\tcalinski_harabasz\tn_clusters\n",
+      "name\t\t\ttime\t\tsilhouette\tdavies_bouldin\tcalinski_harabasz\tn_clusters\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Number of labels is 1. Valid values are 2 to n_samples - 1 (inclusive)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m knn_graph \u001b[38;5;241m=\u001b[39m kneighbors_graph(X, n_neighbors\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m30\u001b[39m, mode \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectivity\u001b[39m\u001b[38;5;124m'\u001b[39m, include_self\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, n_jobs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     15\u001b[0m AgCl \u001b[38;5;241m=\u001b[39m AgglomerativeClustering(n_clusters \u001b[38;5;241m=\u001b[39m i, linkage\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msingle\u001b[39m\u001b[38;5;124m'\u001b[39m, connectivity \u001b[38;5;241m=\u001b[39m knn_graph)\n\u001b[0;32m---> 16\u001b[0m bench_marks(AgCl, name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAgglomerative clustering connectivity\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     18\u001b[0m AgCl \u001b[38;5;241m=\u001b[39m AgglomerativeClustering(n_clusters \u001b[38;5;241m=\u001b[39m i, linkage\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msingle\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     19\u001b[0m bench_marks(AgCl, name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAgglomerative clustering\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [2], line 19\u001b[0m, in \u001b[0;36mbench_marks\u001b[0;34m(algoritm, name)\u001b[0m\n\u001b[1;32m     16\u001b[0m fit_time \u001b[38;5;241m=\u001b[39m time() \u001b[38;5;241m-\u001b[39m t0\n\u001b[1;32m     17\u001b[0m results \u001b[38;5;241m=\u001b[39m [name, fit_time]\n\u001b[0;32m---> 19\u001b[0m results \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [\u001b[43msilhouette_score\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetric\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43meuclidean\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msample_size\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m300\u001b[39;49m\u001b[43m)\u001b[49m]\n\u001b[1;32m     20\u001b[0m results \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [davies_bouldin_score(X ,labels)]\n\u001b[1;32m     21\u001b[0m results \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [calinski_harabasz_score(X , labels)]\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/cluster/_unsupervised.py:117\u001b[0m, in \u001b[0;36msilhouette_score\u001b[0;34m(X, labels, metric, sample_size, random_state, **kwds)\u001b[0m\n\u001b[1;32m    115\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    116\u001b[0m         X, labels \u001b[38;5;241m=\u001b[39m X[indices], labels[indices]\n\u001b[0;32m--> 117\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mmean(\u001b[43msilhouette_samples\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetric\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmetric\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/cluster/_unsupervised.py:227\u001b[0m, in \u001b[0;36msilhouette_samples\u001b[0;34m(X, labels, metric, **kwds)\u001b[0m\n\u001b[1;32m    225\u001b[0m n_samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(labels)\n\u001b[1;32m    226\u001b[0m label_freqs \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mbincount(labels)\n\u001b[0;32m--> 227\u001b[0m \u001b[43mcheck_number_of_labels\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclasses_\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_samples\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    229\u001b[0m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmetric\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m metric\n\u001b[1;32m    230\u001b[0m reduce_func \u001b[38;5;241m=\u001b[39m functools\u001b[38;5;241m.\u001b[39mpartial(\n\u001b[1;32m    231\u001b[0m     _silhouette_reduce, labels\u001b[38;5;241m=\u001b[39mlabels, label_freqs\u001b[38;5;241m=\u001b[39mlabel_freqs\n\u001b[1;32m    232\u001b[0m )\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/cluster/_unsupervised.py:33\u001b[0m, in \u001b[0;36mcheck_number_of_labels\u001b[0;34m(n_labels, n_samples)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;124;03m\"\"\"Check that number of labels are valid.\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \n\u001b[1;32m     24\u001b[0m \u001b[38;5;124;03mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;124;03m    Number of samples.\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m<\u001b[39m n_labels \u001b[38;5;241m<\u001b[39m n_samples:\n\u001b[0;32m---> 33\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m     34\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of labels is \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m. Valid values are 2 to n_samples - 1 (inclusive)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     35\u001b[0m         \u001b[38;5;241m%\u001b[39m n_labels\n\u001b[1;32m     36\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: Number of labels is 1. Valid values are 2 to n_samples - 1 (inclusive)"
      ]
     }
    ],
@@ -124,17 +114,25 @@
     "random_state = np.random.seed(42)\n",
     "n_clusters = [2, 3, 4, 5]\n",
     "print(82 * \"_\")\n",
-    "print(\"init\\t\\t\\ttime\\t\\tsilhouette\\tdavies_bouldin\\tcalinski_harabasz\\tn_clusters\\n\")\n",
+    "print(\"name\\t\\t\\ttime\\t\\tsilhouette\\tdavies_bouldin\\tcalinski_harabasz\\tn_clusters\\n\")\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(dataset)\n",
+    "pca = PCA(n_components = 0.95)\n",
+    "X_pca = pca.fit_transform(X_scaled)\n",
+    "\n",
     "\n",
     "for i in n_clusters:\n",
     "#AgglomerativeClustering\n",
-    "#     knn_graph = kneighbors_graph(reduced_data, n_neighbors= 30, mode = 'connectivity', include_self=True, n_jobs = -1)\n",
     "\n",
-    "#     AgCl = AgglomerativeClustering(n_clusters = i, linkage= 'single', connectivity = knn_graph)\n",
-    "#     bench_marks(AgCl, name = \"Agglomerative clustering connectivity\")\n",
-    "    \n",
-    "    AgCl = AgglomerativeClustering(n_clusters = i, linkage= 'single')\n",
-    "    bench_marks(AgCl, name = \"Agglomerative clustering\")\n",
+    "    AgCl = AgglomerativeClustering(n_clusters=i, linkage= 'single')\n",
+    "    bench_marks(AgCl, name = \"Agglomerative clustering\", data = X_pca)\n",
+    " \n",
+    "\n",
+    "estimator = AgCl.fit(X_pca)\n",
+    "labels= estimator.labels_\n",
+    "# bench_marks(AgCl, name = \"Agglomerative clustering\")\n",
+    "plot_figure(X_pca, labels)\n",
     "print(82 * \"_\")"
    ]
   }
