--- a/spectralclustering.ipynb
+++ b/spectralclustering.ipynb
@@ -46,25 +46,41 @@
     "patch_sklearn ()\n",
     "from time import time\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.metrics import silhouette_score, davies_bouldin_score, calinski_harabasz_score\n",
     "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
     "\n",
-    "X = dataset[:1000]\n",
-    "reduced_data = PCA(n_components = 0.95).fit_transform(dataset)\n",
-    "\n",
-    "def bench_marks(algoritm, name):\n",
+    "def plot_figure(data, labels):\n",
     "    \n",
+    "\n",
+    "    \n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    plt.scatter(data[:,0], data[:,1], c=labels, linewidths= 0.01, edgecolors='k')\n",
+    "    \n",
+    "    plt.savefig(\"spectral.pdf\")\n",
+    "\n",
+    "\n",
+    "def bench_marks(algoritm, name, data):\n",
+    "    \n",
+    "\n",
     "    t0 = time()\n",
-    "    estimator = make_pipeline(StandardScaler(), algoritm).fit(reduced_data)\n",
-    "    labels= estimator[-1].labels_\n",
-    "        \n",
-    "    fit_time = time() - t0\n",
+    "    with warnings.catch_warnings():\n",
+    "        warnings.filterwarnings(\n",
+    "            \"ignore\",\n",
+    "            message=\"Graph is not fully connected, spectral embedding\"\n",
+    "            + \" may not work as expected.\",\n",
+    "            category=UserWarning,\n",
+    "        )\n",
+    "        estimator = algoritm.fit(data)\n",
+    "    labels= estimator.labels_\n",
+    "    fit_time = time() - t0    \n",
+    "\n",
     "    results = [name, fit_time]\n",
     "\n",
-    "    results += [silhouette_score(reduced_data, labels, metric = 'euclidean')]\n",
-    "    results += [davies_bouldin_score(reduced_data,labels)]\n",
-    "    results += [calinski_harabasz_score(reduced_data, labels)]\n",
+    "    results += [silhouette_score(data, labels, metric = 'euclidean')]\n",
+    "    results += [davies_bouldin_score(data,labels)]\n",
+    "    results += [calinski_harabasz_score(data, labels)]\n",
     "    \n",
     "    n_clusters = len(set(labels)) - (1 if -1 in labels else 0)\n",
     "    results += [n_clusters]\n",
@@ -72,7 +88,8 @@
     "    formatter_result = (\n",
     "        \"{:5s}\\t\\t{:.3f}s\\t\\t{:.3f}\\t{:.3f}\\t\\t{:.2f}\\t\\t{:.0f}\"\n",
     "    )\n",
-    "    print(formatter_result.format(*results))"
+    "    print(formatter_result.format(*results))\n",
+    "    \n"
    ]
   },
   {
@@ -160,28 +177,29 @@
     "patch_sklearn ()\n",
     "\n",
     "random_state = np.random.seed(42)\n",
-    "n_clusters = [2, 3, 4]\n",
+    "n_clusters = [2, 3]\n",
     "print(82 * \"_\")\n",
-    "print(\"init\\t\\t\\ttime\\tinertia\\t\\tsilhouette\\tdavies_bouldin\\tcalinski_harabasz\\tn_clusters\\n\")\n",
+    "print(\"assign_labels\\t\\t\\ttime\\t\\tsilhouette\\tdavies_bouldin\\tcalinski_harabasz\\tn_clusters\\n\")\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(dataset)\n",
+    "pca = PCA(n_components = 0.95)\n",
+    "X_pca = pca.fit_transform(X_scaled)\n",
     "\n",
     "for i in n_clusters:\n",
-    "    spectralclustering = SpectralClustering(n_clusters = i, assign_labels = 'discretize', affinity = 'nearest_neighbors', random_state = random_state, n_jobs = -1, eigen_solver = 'amg')\n",
-    "    bench_marks(spectralclustering, name=\"spectralclustering discretize\")\n",
-    "# spectralclustering = SpectralClustering(n_clusters = 2, assign_labels = 'discretize', affinity = 'rbf', random_state = random_state, n_jobs=-1, eigen_solver = 'amg')#Crea array de tamaño (343880, 343880) and data type float64, por lo que consume mucha memoria\n",
-    "# bench_marks(spectralclustering, name=\"spectralclustering discretize\")\n",
-    "# spectralclustering = SpectralClustering(n_clusters = 2, assign_labels = 'discretize', affinity = 'precomputed', random_state = random_state,eigen_solver = 'amg')  #array must be 2-dimensional and square. shape = (343880, 2)\n",
-    "# bench_marks(spectralclustering, name=\"spectralclustering discretize\")\n",
-    "# spectralclustering = SpectralClustering(n_clusters = 2, assign_labels = 'discretize', affinity = 'precomputed_nearest_neighbors', random_state = random_state, eigen_solver = 'amg') #Negative values in data passed to precomputed distance matrix.\n",
-    "# bench_marks(spectralclustering, name=\"spectralclustering discretize\")\n",
+    "    spectralDiscretize = SpectralClustering(n_clusters = i, assign_labels = 'discretize', affinity = 'nearest_neighbors', random_state = random_state, n_jobs = -1, eigen_solver = 'amg', n_neighbors = 2)\n",
+    "    bench_marks(spectralDiscretize, name=\"discretize\", data = X_pca)\n",
     "\n",
-    "    spectralclustering = SpectralClustering(n_clusters = i, assign_labels = 'kmeans', affinity = 'nearest_neighbors', random_state = random_state, n_jobs=-1, eigen_solver = 'amg')\n",
-    "    bench_marks(spectralclustering, name=\"spectralclustering kmeans\")\n",
-    "# spectralclustering = SpectralClustering(n_clusters = 2, assign_labels = 'kmeans',  affinity = 'rbf', random_state = random_state, n_jobs=-1, eigen_solver = 'amg')\n",
-    "# bench_marks(spectralclustering, name=\"spectralclustering kmeans\")\n",
-    "#     spectralclustering = SpectralClustering(n_clusters = i, assign_labels = 'kmeans', affinity = 'precomputed', random_state = random_state)\n",
-    "#     bench_marks(spectralclustering, name=\"spectralclustering kmeans\")\n",
-    "# spectralclustering = SpectralClustering(n_clusters = 2, assign_labels = 'kmeans', affinity = 'precomputed_nearest_neighbors', random_state = random_state,eigen_solver = 'amg')\n",
-    "# bench_marks(spectralclustering, name=\"spectralclustering kmeans\")\n",
+    "    spectralcluster_qr = SpectralClustering(n_clusters = i, assign_labels = 'cluster_qr', affinity = 'nearest_neighbors', random_state = random_state, n_jobs = -1, eigen_solver = 'amg', n_neighbors = 2)\n",
+    "    bench_marks(spectralcluster_qr, name=\"cluster_qr\", data = X_pca)\n",
+    "\n",
+    "    spectralkmeans = SpectralClustering(n_clusters = i, assign_labels = 'kmeans', affinity = 'nearest_neighbors', random_state = random_state, n_jobs=-1, eigen_solver = 'amg', n_neighbors = 2)\n",
+    "    bench_marks(spectralkmeans, name=\"kmeans\", data = X_pca)\n",
+    "\n",
+    "estimator = spectralkmeans.fit(X_pca)\n",
+    "labels= estimator.labels_\n",
+    "plot_figure(X_pca, labels)\n",
+    "\n",
     "\n",
     "print(82 * \"_\")"
    ]
